Add JWT
