# internal/handler/auth_handler.go
@@ -7,14 +7,14 @@ import (
 
 	// Import middleware
 	"auth-service/internal/model"
-	"auth-service/internal/service"
+	"auth-service/pkg/response"
 )
 
 type AuthHandler struct {
 	AuthService AuthService
 }
 
-func NewAuthHandler(authSvc *service.AuthService) *AuthHandler {
+func NewAuthHandler(authSvc AuthService) *AuthHandler {
 	return &AuthHandler{
 		AuthService: authSvc,
 	}
@@ -34,14 +34,38 @@ func NewAuthHandler(authSvc *service.AuthService) *AuthHandler {
 func (h *AuthHandler) RegisterHandler(c *gin.Context) {
 	var user model.User
 	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
+		c.JSON(
+			http.StatusBadRequest,
+			response.Response{
+				Status:  "error",
+				Message: "Invalid input",
+				Error:   err.Error(),
+				Data:    nil,
+			},
+		)
 		return
 	}
 	if err := h.AuthService.Register(c, user); err != nil {
-		c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+		c.JSON(
+			http.StatusConflict,
+			response.Response{
+				Status:  "error",
+				Message: "Invalid input",
+				Error:   err.Error(),
+				Data:    nil,
+			},
+		)
 		return
 	}
-	c.JSON(http.StatusCreated, gin.H{"message": "User created"})
+	c.JSON(
+		http.StatusCreated,
+		response.Response{
+			Status:  "success",
+			Message: "User created",
+			Error:   "",
+			Data:    nil,
+		},
+	)
 }
 
 // LoginHandler godoc
@@ -50,23 +74,40 @@ func (h *AuthHandler) RegisterHandler(c *gin.Context) {
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param user body model.User true "User credentials"
+// @Param user body model.LoginRequest true "User credentials"
 // @Success 200 {object} map[string]interface{} "Login successful"
 // @Failure 400 {object} map[string]interface{} "Invalid input"
 // @Failure 401 {object} map[string]interface{} "Unauthorized"
 // @Router /auth/login [post]
 func (h *AuthHandler) LoginHandler(c *gin.Context) {
-	var user model.User
+	var user model.LoginRequest
 	if err := c.ShouldBindJSON(&user); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
 		return
 	}
 	token, err := h.AuthService.Login(c, user.Username, user.Password)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		c.JSON(http.StatusUnauthorized,
+			response.Response{
+				Status:  "error",
+				Message: "Unauthorized",
+				Error:   err.Error(),
+				Data:    nil,
+			},
+		)
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"token": token})
+	c.JSON(
+		http.StatusOK,
+		response.Response{
+			Status:  "success",
+			Message: "Login successful",
+			Error:   "",
+			Data: gin.H{
+				"token": token,
+			},
+		},
+	)
 }
 
 // ProtectedHandler godoc
@@ -78,5 +119,13 @@ func (h *AuthHandler) LoginHandler(c *gin.Context) {
 // @Router /auth/protected [get]
 // @Security BearerAuth
 func (h *AuthHandler) ProtectedHandler(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "This is a protected route"})
+	c.JSON(
+		http.StatusOK,
+		response.Response{
+			Status:  "success",
+			Message: "Protected route access",
+			Error:   "",
+			Data:    nil,
+		},
+	)
 }
