# internal/handler/handler.go
@@ -8,6 +8,5 @@ import (
 type AuthService interface {
 	Register(ctx context.Context, user model.User) error
 	Login(ctx context.Context, username, password string) (string, error)
-	GenerateToken(ctx context.Context, username string) (string, error)
 	LoginWithTelegram(ctx context.Context, u model.User) (string, error)
 }
